updates welcome message

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <p>Here we go again... :-)</p>
-    <!-- Add your site or app content here -->
+    <p>Here we go again... </p>
+    <!-- Add your site content here -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script src="js/main.js"></script>
